result services changes

--- a/student/src/main/resources/application.properties
+++ b/student/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.h2.console.enabled=true
 # default path: h2-console
 spring.h2.console.path=/h2-ui
 spring.application.name=student-service
+com.student.service.result.service.create.url=http://RESULT-SERVICE/result/create
+com.student.service.course.service.create.url=http://COURSE-SERVICE/course/create
+com.student.service.result.service.get.url=http://RESULT-SERVICE/result/
+com.student.service.course.service.get.url=http://COURSE-SERVICE/course/
